--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -409,10 +409,10 @@ CREATE TABLE mante_guia_remision(
     `ConductorNombreCompleto` VARCHAR(24),
     
     `PuntoPartidaCodigo` VARCHAR(6),
-    `PuntoPartidaCodigoDireccion` VARCHAR(128),
+    `PuntoPartidaDireccion` VARCHAR(128),
 
     `PuntoLlegadaCodigo` VARCHAR(6),
-    `PuntoLlegadaCodigoDireccion` VARCHAR(128),
+    `PuntoLlegadaDireccion` VARCHAR(128),
 
     `Enlace` VARCHAR(200) DEFAULT NULL,
     `ErrorSunat` VARCHAR(250) DEFAULT NULL,
@@ -447,7 +447,7 @@ INSERT INTO `user_menu_sistema`(`IdForm`, `Enlace`, `Nombre`, `Estado`, `Nivel1`
 ```
 
 ```sql
-INSERT INTO mante_motivo_traslado (cIdMotivoTrasladoodigo, descripcion) VALUES
+INSERT INTO mante_motivo_traslado (IdMotivoTraslado, descripcion) VALUES
     ('01', 'Venta'),
     ('02', 'Compra'),
     ('04', 'Traslado entre establecimientos de la misma empresa'),
