--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -360,20 +360,20 @@ Regularizar los productos que tuvieron sun set 0
 DROP TABLE IF EXISTS mante_motivo_traslado;
 CREATE TABLE mante_motivo_traslado(
     IdMotivoTraslado VARCHAR(2) NOT NULL,
-    Descripcion VARCHAR(255) NOT NULL,
+    Descripcion VARCHAR(255) COLLATE utf8_unicode_ci NOT NULL,
     Estado int(1) DEFAULT '1', 
     CONSTRAINT pk_mante_motivo_traslado PRIMARY KEY (IdMotivoTraslado)
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
 DROP TABLE IF EXISTS mante_ubicacion_geografica;
 CREATE TABLE mante_ubicacion_geografica (
     IdUbicacionGeografica VARCHAR(6) NOT NULL,
-    Distrito VARCHAR(64) NOT NULL,
-    Provincia VARCHAR(64) NOT NULL,
-    Departamento VARCHAR(64) NOT NULL,
+    Distrito VARCHAR(64) COLLATE utf8_unicode_ci NOT NULL,
+    Provincia VARCHAR(64) COLLATE utf8_unicode_ci NOT NULL,
+    Departamento VARCHAR(64) COLLATE utf8_unicode_ci NOT NULL,
     Estado int(1) DEFAULT '1', 
     CONSTRAINT pk_mante_ubicacion_geografica PRIMARY KEY (IdUbicacionGeografica)
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
 DROP TABLE IF EXISTS mante_guia_remision;
 CREATE TABLE mante_guia_remision(
@@ -386,41 +386,41 @@ CREATE TABLE mante_guia_remision(
     `Numero` int(11) DEFAULT '-1',
     `IdMotivoTraslado` INT,
 
-    `Origen` VARCHAR(64) DEFAULT '', -- Mov. almacen, Venta, Compra.
-    `NroFactura` varchar(50) DEFAULT NULL, -- Facturas que hace referencia
+    `Origen` VARCHAR(64) COLLATE utf8_unicode_ci DEFAULT '', -- Mov. almacen, Venta, Compra.
+    `NroFactura` varchar(50) COLLATE utf8_unicode_ci DEFAULT NULL, -- Facturas que hace referencia
 
     `FechaReg` datetime DEFAULT NULL,
-    `FechaEmision` datetime DEFAULT NULL,
-    `FechaTraslado` DATETIME DEFAULT NULL,
+    `FechaEmision` DATE DEFAULT NULL,
+    `FechaTraslado` DATE DEFAULT NULL,
 
-    `DestinatarioRasonSocial` VARCHAR(64),
-    `DestinatarioTipoDocumento` VARCHAR(64),
-    `DestinatarioNumeroDocumento` VARCHAR(64),
+    `DestinatarioRasonSocial` VARCHAR(64)  COLLATE utf8_unicode_ci ,
+    `DestinatarioTipoDocumento` VARCHAR(64)  COLLATE utf8_unicode_ci ,
+    `DestinatarioNumeroDocumento` VARCHAR(64)  COLLATE utf8_unicode_ci ,
 
     -- Transportista
-    `TransporteVehiculo` VARCHAR(64),
-    `TransporteMarca` VARCHAR(64),
-    `TransportePlacaN` VARCHAR(64),
-    `TransporteCertificadoI` VARCHAR(64),
-    `TransporteLicenciaC` VARCHAR(64),
+    `TransporteVehiculo` VARCHAR(64)  COLLATE utf8_unicode_ci,
+    `TransporteMarca` VARCHAR(64)  COLLATE utf8_unicode_ci,
+    `TransportePlacaN` VARCHAR(64)  COLLATE utf8_unicode_ci,
+    `TransporteCertificadoI` VARCHAR(64)  COLLATE utf8_unicode_ci,
+    `TransporteLicenciaC` VARCHAR(64)  COLLATE utf8_unicode_ci,
     
-    `ConductorTipoDocumento` VARCHAR(24),
-    `ConductorNumeroDocumento` VARCHAR(24),
-    `ConductorNombreCompleto` VARCHAR(24),
+    `ConductorTipoDocumento` VARCHAR(24)  COLLATE utf8_unicode_ci,
+    `ConductorNumeroDocumento` VARCHAR(24)  COLLATE utf8_unicode_ci,
+    `ConductorNombreCompleto` VARCHAR(24)  COLLATE utf8_unicode_ci,
     
-    `PuntoPartidaCodigo` VARCHAR(6),
-    `PuntoPartidaDireccion` VARCHAR(128),
+    `PuntoPartidaCodigo` VARCHAR(6)  COLLATE utf8_unicode_ci,
+    `PuntoPartidaDireccion` VARCHAR(128)  COLLATE utf8_unicode_ci,
 
-    `PuntoLlegadaCodigo` VARCHAR(6),
-    `PuntoLlegadaDireccion` VARCHAR(128),
+    `PuntoLlegadaCodigo` VARCHAR(6)  COLLATE utf8_unicode_ci,
+    `PuntoLlegadaDireccion` VARCHAR(128)  COLLATE utf8_unicode_ci,
 
-    `Enlace` VARCHAR(200) DEFAULT NULL,
-    `ErrorSunat` VARCHAR(250) DEFAULT NULL,
+    `Enlace` VARCHAR(200) COLLATE utf8_unicode_ci DEFAULT NULL,
+    `ErrorSunat` VARCHAR(250) COLLATE utf8_unicode_ci DEFAULT NULL,
 
     `Estado` int(1) DEFAULT '1',
 
     CONSTRAINT pk_mante_guia_remision PRIMARY KEY (`IdGuiaRemision`)
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
 DROP TABLE IF EXISTS mante_guia_remision_detalle;
 CREATE TABLE mante_guia_remision_detalle(
@@ -437,7 +437,7 @@ CREATE TABLE mante_guia_remision_detalle(
     `Peso` double(11,3) DEFAULT '0.000',
 
     CONSTRAINT pk_mante_guia_remision_detalle PRIMARY KEY (`IdGuiaRemisionDetalle`)
-);
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 ```
 
 ```sql
