--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -489,3 +489,22 @@ insert  into `mante_ubicacion_geografica`(`IdUbicacionGeografica`,`distrito`,`pr
 ALTER TABLE `mante_registro_nota_pedido` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AFTER `IdComprobante`;
 ALTER TABLE `mante_venta` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AFTER `Exonerado`;
 ```
+
+# ZAYBER NOTAS
+- Venta: Validar las ventas que no permitan vender con el almacen 1 o almacen principal
+- Configurar la impresion a formato A4 Y TIkect -
+- En los movimiento de almacen solo se debe mostrar el almacen que le corresponde
+- En todo los movimiento establecer por defecto unidad NUI
+- Compras busqueda con RUC.
+- Cambio de color en el stock de almacen
+
+corpo zayber 80
+comercial 110
+kalu 240
+
+------------------------
+1718
+
+
+l&E   470
+corpo zayber        8
