--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -438,9 +438,10 @@ CREATE TABLE mante_guia_remision_detalle(
     `IdProducto` int(11) DEFAULT '-1',
     `Codigo` varchar(50) DEFAULT NULL,
     `Producto` VARCHAR(150) DEFAULT NULL,
-    `Cantidad` double(11,3) DEFAULT '0.000',
+    `Cantidad` double(11,2) DEFAULT '0.000',
     `Unidad` VARCHAR(50) DEFAULT NULL,
-    `Peso` double(11,3) DEFAULT '0.000',
+    `IdUnidad` INT NOT NULL DEFAULT '1',
+    `Peso` double(11,2) DEFAULT '0.000',
 
     CONSTRAINT pk_mante_guia_remision_detalle PRIMARY KEY (`IdGuiaRemisionDetalle`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
@@ -488,6 +489,42 @@ insert  into `mante_ubicacion_geografica`(`IdUbicacionGeografica`,`distrito`,`pr
 ```sql
 ALTER TABLE `mante_registro_nota_pedido` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AFTER `IdComprobante`;
 ALTER TABLE `mante_venta` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AFTER `Exonerado`;
+-- ALTER TABLE `mante_guia_remision_detalle` ADD `IdUnidad` INT NOT NULL DEFAULT '1' AFTER `Unidad`;
+```
+
+```sql
+DELIMITER $$
+
+USE `db_zayber`$$
+
+DROP FUNCTION IF EXISTS `fn_Serie_Numero_Simbolo_GUIA`$$
+
+CREATE FUNCTION `fn_Serie_Numero_Simbolo_GUIA`(`pIdAlm` INT(5), `pIdComp` INT(3)) RETURNS VARCHAR(25) CHARSET utf8 COLLATE utf8_unicode_ci
+    READS SQL DATA
+    DETERMINISTIC
+BEGIN
+	DECLARE aResult VARCHAR(25);
+	DECLARE aSerie INT(5);
+	DECLARE aNumero INT(11);
+	DECLARE aSimbolo VARCHAR(3);
+	DECLARE aIdEmpresa INT(3);
+	SET aSerie=1;SET aNumero=-1;SET aSimbolo='';
+	
+	SELECT IFNULL(Serie,1) INTO aSerie FROM `mante_almacen_serie` 
+	WHERE IdComprobante=pIdComp AND IdAlmacen=pIdAlm AND Estado=1 LIMIT 1;
+	
+	SELECT IFNULL(Simbolo,1) INTO aSimbolo FROM `mante_comprobante` WHERE IdComprobante=pIdComp LIMIT 1;
+	
+	SELECT IdEmpresa INTO aIdEmpresa FROM `mante_almacen_empresa` WHERE IdAlmacen=pIdAlm LIMIT 1;
+	
+	SELECT IFNULL(MAX(Numero+1),1) INTO aNumero FROM `mante_guia_remision` 
+	WHERE IdComprobante=pIdComp AND Serie=aSerie AND IdEmpresa=aIdEmpresa;
+	
+	SET aResult=CONCAT(aSimbolo,'/',aSerie,'/',aNumero);
+	RETURN aResult;
+END$$
+
+DELIMITER ;
 ```
 
 # ZAYBER NOTAS
@@ -495,8 +532,8 @@ ALTER TABLE `mante_venta` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AF
 - Configurar la impresion a formato A4 Y TIkect -
 - En los movimiento de almacen solo se debe mostrar el almacen que le corresponde
 - En todo los movimiento establecer por defecto unidad NUI
-- Compras busqueda con RUC.
-- Cambio de color en el stock de almacen
+* Compras busqueda con RUC.
+* Cambio de color en el stock de almacen
 
 corpo zayber 80
 comercial 110
