--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -489,6 +489,9 @@ insert  into `mante_ubicacion_geografica`(`IdUbicacionGeografica`,`distrito`,`pr
 ```sql
 ALTER TABLE `mante_registro_nota_pedido` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AFTER `IdComprobante`;
 ALTER TABLE `mante_venta` ADD `PlacaVehiculo` VARCHAR(64) NOT NULL DEFAULT '' AFTER `Exonerado`;
+-- s
+
+ALTER TABLE `mante_guia_remision` ADD COLUMN `Formato` VARCHAR(64) NOT NULL DEFAULT '';
 -- ALTER TABLE `mante_guia_remision_detalle` ADD `IdUnidad` INT NOT NULL DEFAULT '1' AFTER `Unidad`;
 ```
 
@@ -528,9 +531,14 @@ DELIMITER ;
 ```
 
 # ZAYBER NOTAS
-- Venta: Validar las ventas que no permitan vender con el almacen 1 o almacen principal
+* Venta: Validar las ventas que no permitan vender con el almacen 1 o almacen principal
 - Configurar la impresion a formato A4 Y TIkect -
-- En los movimiento de almacen solo se debe mostrar el almacen que le corresponde
+* En los movimiento de almacen solo se debe mostrar el almacen que le corresponde
 - En todo los movimiento establecer por defecto unidad NUI
 * Compras busqueda con RUC.
 * Cambio de color en el stock de almacen
+
+- Comprobantes de contingencia
+- Crear mas formatos o tamaños de quia de remision
+- Regulazirar cardex con stocks actuales en los almacenes
+- Cuando se anula una factura Si viene de una nota de pedido anular dicho nota de pedido
