--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -542,3 +542,15 @@ DELIMITER ;
 - Crear mas formatos o tamaños de quia de remision
 - Regulazirar cardex con stocks actuales en los almacenes
 - Cuando se anula una factura Si viene de una nota de pedido anular dicho nota de pedido
+- crear cliente
+
+```sql
+ALTER TABLE `mante_almacen` ADD COLUMN `Vender` TINYINT NOT NULL DEFAULT '0';
+```
+
+tecsup
+senati
+cerro verde
+
+- Gramo
+- Caja
