--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -555,4 +555,86 @@ cerro verde
 
 
 # SISTEMA SERONWE
-- En el reporte de tikets agregar la hora en la fecha.
+* En el reporte de tikets agregar la hora en la fecha.
+
+
+# ZAYBER
+```sql
+ALTER TABLE `mante_almacen_serie` ADD COLUMN `Contingencia` TINYINT DEFAULT 0;
+ALTER TABLE `mante_venta` ADD COLUMN `Contingencia` TINYINT DEFAULT 0;
+ALTER TABLE `mante_guia_remision` ADD COLUMN `ControlStock` TINYINT DEFAULT 0;
+
+ALTER TABLE `mante_guia_remision_detalle` ADD COLUMN `Precio` DOUBLE(11,2) DEFAULT 0.00;
+ALTER TABLE `mante_guia_remision_detalle` ADD COLUMN `Importe` DOUBLE(11,2) DEFAULT 0.00;
+ALTER TABLE `mante_guia_remision_detalle` ADD COLUMN `IdTipoIgv` INT(3);
+AL
+```
+
+```sql
+DELIMITER $$
+
+USE `db_zayber`$$
+
+DROP FUNCTION IF EXISTS `fn_Serie_Numero_Simbolo_FE`$$
+
+CREATE FUNCTION `fn_Serie_Numero_Simbolo_FE`(`pIdAlm` INT(5), `pIdComp` INT(3), `pContingencia` INT(1)) RETURNS VARCHAR(25) CHARSET utf8 COLLATE utf8_unicode_ci
+    READS SQL DATA
+    DETERMINISTIC
+BEGIN
+	DECLARE aResult VARCHAR(25);
+	DECLARE aSerie INT(5);
+	DECLARE aNumero INT(11);
+	DECLARE aSimbolo VARCHAR(3);
+	DECLARE aIdEmpresa INT(3);
+	SET aSerie=1;SET aNumero=-1;SET aSimbolo='';
+	
+	SELECT IFNULL(Serie,1) INTO aSerie FROM `mante_almacen_serie` 
+	WHERE IdComprobante=pIdComp AND IdAlmacen=pIdAlm AND Estado=1 AND `Contingencia` = pContingencia LIMIT 1;
+	
+	SELECT IFNULL(Simbolo,1) INTO aSimbolo FROM `mante_comprobante` WHERE IdComprobante=pIdComp LIMIT 1;
+	
+	SELECT IdEmpresa INTO aIdEmpresa FROM `mante_almacen_empresa` WHERE IdAlmacen=pIdAlm LIMIT 1;
+	
+	SELECT IFNULL(MAX(Numero+1),1) INTO aNumero FROM `mante_venta` 
+	WHERE IdComprobante=pIdComp AND Serie=aSerie AND IdEmpresa=aIdEmpresa AND `Contingencia` = pContingencia;
+	
+	SET aResult=CONCAT(aSimbolo,'/',aSerie,'/',aNumero);
+	RETURN aResult;
+END$$
+
+DELIMITER ;
+```
+
+
+--
+Estoy emitiendo comprobantes con la serie "FPP1-00000001".   ¿La serie de los comprobantes de contingencia siemrpe tienen que ser en este formato "0001-00000001"? y ¿puedo usar otro formato como "0PP1-00000001"?
+--
+Sobre las guias de remision electronica en el catalogo 20 solo hay 9 motivos de traslado sin enbargo en la guias de remision fisica hay mas de 12 motivos de traslado como consignacion devolucion y entre otros. ¿por que esa diferencia?
+
+
+-- PRocesos.php
+-- Reportes.php
+
+# Capon
+* Historial de las comandas o menus atendidas den la cocina // Revisar nuevamente
+* Buscador de comandas en mosos
+* Refrescado aumentar a 15 s
+* En la imprecion agregar que se muestre las fechas.
+- Dividir pagos.
+* Reporte de ventas reiniciar el nro de venta por dia
+* corregir espaciado que se crea en lado derecho.
+
+# SISTEMA DE RESTAURANTE
+- Zonas o sectores: salon, terraza.
+- Comandas:
+
+# ARCHIVOS MODIFICADO.
+- Cocina
+- caja
+- inicioAtencionCliente.blade
+
+2564
+
+- INICIO := 1501
+
+1493
