--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -632,3 +632,43 @@ Sobre las guias de remision electronica en el catalogo 20 solo hay 9 motivos de 
 - Cocina
 - caja
 - inicioAtencionCliente.blade
+
+# LOGICA DIVICION DE PAGO
+- Crear una tabla de pagos. en todo pago almenos debe haver un pago
+- Poder dividir en montos fijos de una sola atencion.
+- 
+
+```SQL
+CREATE TABLE venta_pagos(
+  `idVentaPago` int(10) unsigned NOT NULL AUTO_INCREMENT,
+  `idVenta` int(11) NOT NULL,
+  `idUsuarioCreacion` int(11) NOT NULL,
+  `fecha` datetime NOT NULL,
+  `idTipoComprobante` varchar(255) NOT NULL,
+  `idTipoDocumento` varchar(255) NOT NULL,
+  `idCliente` int(11) NOT NULL,
+  `nombre` varchar(255) NOT NULL,
+  `ruc` varchar(255) NOT NULL,
+  `direccion` varchar(255) NOT NULL,
+  `idCaja` int(11) NOT NULL,
+  `total` decimal(8,2) NOT NULL,
+  `turno` int(11) NOT NULL,
+  `idCierreCaja` int(11) NOT NULL,
+  `datoAdicional` varchar(255) NOT NULL,
+  `nombreCredito` varchar(255) DEFAULT NULL,
+  `anulado` tinyint(1) NOT NULL DEFAULT 0,
+  `fechaAnulacion` datetime DEFAULT NULL,
+  `motivoAnulacion` varchar(255) DEFAULT NULL,
+  PRIMARY KEY (`idVentaPago`)
+) ENGINE=InnoDB;
+```
+
+
+
+
+# CHASKI
+- boletas no estan anuladas
+
+public_html/hoteles/hotelchaski/restaurant
+
+2346
