--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -670,5 +670,11 @@ CREATE TABLE venta_pagos(
 - boletas no estan anuladas
 
 public_html/hoteles/hotelchaski/restaurant
-
 2346
+
+
+Martes:
+hotel amerinca correcion de checkou, me tomo bastante tiempo ya su logico es diferente al de la web.
+
+----------------                ---------------------
+auroanericana                   seguridad minera.
