--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -636,7 +636,6 @@ Sobre las guias de remision electronica en el catalogo 20 solo hay 9 motivos de 
 # LOGICA DIVICION DE PAGO
 - Crear una tabla de pagos. en todo pago almenos debe haver un pago
 - Poder dividir en montos fijos de una sola atencion.
-- 
 
 ```SQL
 CREATE TABLE venta_pagos(
@@ -678,3 +677,14 @@ hotel amerinca correcion de checkou, me tomo bastante tiempo ya su logico es dif
 
 ----------------                ---------------------
 auroanericana                   seguridad minera.
+
+
+
+```sql
+ALTER TABLE `comprobantes` ADD COLUMN `idVentaPago` INT(11) NOT NULL;
+ALTER TABLE `comprobantes` MODIFY idVenta INT(11) DEFAULT 0;
+```
+
+
+
+-- 1608
