--- a/skynet/1.0_avanze.md
+++ b/skynet/1.0_avanze.md
@@ -642,6 +642,7 @@ CREATE TABLE venta_pagos(
   `idVentaPago` int(10) unsigned NOT NULL AUTO_INCREMENT,
   `idVenta` int(11) NOT NULL,
   `idUsuarioCreacion` int(11) NOT NULL,
+  `idTipoVenta` int(11) NOT NULL,
   `fecha` datetime NOT NULL,
   `idTipoComprobante` varchar(255) NOT NULL,
   `idTipoDocumento` varchar(255) NOT NULL,
@@ -681,10 +682,73 @@ auroanericana                   seguridad minera.
 
 
 ```sql
-ALTER TABLE `comprobantes` ADD COLUMN `idVentaPago` INT(11) NOT NULL;
+-- ALTER TABLE `comprobantes` ADD COLUMN `idVentaPago` INT(11) NOT NULL;
 ALTER TABLE `comprobantes` MODIFY idVenta INT(11) DEFAULT 0;
+INSERT INTO `tipo_ventas` (`idTipoVenta`, `descripcion`, `fechaCreacion`, `idUsuarioCreacion`) VALUES ('5', 'Multiple', '2020-02-01', '1');
+```
+```sql
+DELIMITER $$
+
+USE `skyresta_capon`$$
+
+DROP PROCEDURE IF EXISTS `buscar_ventas_recientes`$$
+
+CREATE DEFINER=`root`@`localhost` PROCEDURE `buscar_ventas_recientes`(IN `fechaBusqueda` DATE)
+BEGIN
+	SELECT GROUP_CONCAT(DISTINCT(mes.`numero`)) AS mesa,
+		GROUP_CONCAT(DISTINCT(users.`numeroMozo`)) AS mozo,
+		tipVen.`descripcion` AS tipoVenta,
+		tipCom.`abreviacion` AS tipComprobante,
+		ven.`total`,
+		ven.idVenta,
+		ven.idTipoVenta
+	FROM ventas ven
+	JOIN detalle_orden_pagos det ON ven.`idVenta` = det.`idVenta`
+	JOIN atencion_clientes ate ON det.`idAtencionCliente` = ate.`idAtencionCliente`
+	LEFT JOIN mesas mes ON ate.`idMesa` = mes.`idMesa`
+	JOIN users ON ate.`idUsuarioAtencion` = users.`id` 
+	JOIN tipo_ventas tipVen ON ven.`idTipoVenta` = tipVen.`idTipoVenta`
+	JOIN tipo_comprobantes tipCom ON ven.`idTipoComprobante` = tipCom.`idTipoComprobante`
+	WHERE DATE(ven.fecha) = fechaBusqueda
+	GROUP BY ven.`idVenta`
+	ORDER BY ven.`idVenta` DESC;
+    END$$
+
+DELIMITER ;
 ```
 
 
+```sql
+DELIMITER $$
 
--- 1608
+USE `skyresta_capon`$$
+
+DROP PROCEDURE IF EXISTS `buscar_ventas_recientes_filtrado`$$
+
+CREATE DEFINER=`root`@`localhost` PROCEDURE `buscar_ventas_recientes_filtrado`(IN `fechaBusqueda` DATE)
+BEGIN
+	SELECT GROUP_CONCAT(DISTINCT(mes.`numero`)) AS mesa,
+		GROUP_CONCAT(DISTINCT(users.`numeroMozo`)) AS mozo,
+		tipVen.`descripcion` AS tipoVenta,
+		tipCom.`abreviacion` AS tipComprobante,
+		ven.`total`,
+		ven.idVenta,
+		ven.idTipoVenta
+	FROM ventas ven
+	JOIN detalle_orden_pagos det ON ven.`idVenta` = det.`idVenta`
+	JOIN atencion_clientes ate ON det.`idAtencionCliente` = ate.`idAtencionCliente`
+	LEFT JOIN mesas mes ON ate.`idMesa` = mes.`idMesa`
+	JOIN users ON ate.`idUsuarioAtencion` = users.`id` 
+	JOIN tipo_ventas tipVen ON ven.`idTipoVenta` = tipVen.`idTipoVenta`
+	JOIN tipo_comprobantes tipCom ON ven.`idTipoComprobante` = tipCom.`idTipoComprobante`
+	WHERE DATE(ven.fecha) = fechaBusqueda
+	AND ven.idTipoComprobante IN (1,2)
+	GROUP BY ven.`idVenta`
+	ORDER BY ven.`idVenta` DESC;
+    END$$
+
+DELIMITER ;
+```
+
+
+TablaReporteVentaPagoReciente
