--- a/skynet/2.0_avanze.md
+++ b/skynet/2.0_avanze.md
@@ -1,7 +1,5 @@
+# ZAYBER
 4.- formatos
-
-. 38
-
 ____________________________________
 43AH
 96AH
@@ -13,3 +11,31 @@ MT30
 
 MT30    => 3485         => 5+1
 MT38    => 3486         => 1+1
+
+
+# Chifa Capon
+Modificaciones Del Chifa Capón
+* Los usuarios de caja deben imprimir cuenta y cancelar pedido.(agregar el botón de cancelar pedido).
+* Los mozos solo imprimen comandas (Eliminar el botón de imprimir cuenta y cancelar pedido, y agregar el botón de imprimir comanda).
+* Reporte de anulaciones de comandas y platillos que realizaron y mostrar el motivo de cancelación de comanda.
+* Mostrar alerta antes de emitir el registro de pago.
+- Cuando se registra pago suena la campanita de cocina.
+- En la interfaz de caja no aparece el nombre de mozo que realizo la comanda.
+* Al realizar una venta directa el sistema no imprime cuenta para realizar el conteo físico.
+    * La sumatoria total de cada menú en una hoja adicional. (Solo en venta directa para llevar).
+
+
+
+    @babel/register babelify gulp gulp-autoprefixer gulp-babel gulp-minify gulp-sass gulp-sourcemaps node-sass
+
+
+
+
+    kalu
+    almacen
+    venta
+
+    IZ
+    Kalu
+
+    Faja B-72 faja oxidel   => 121
