--- a/skynet/2.0_avanze.md
+++ b/skynet/2.0_avanze.md
@@ -15,27 +15,30 @@ MT38    => 3486         => 1+1
 
 # Chifa Capon
 Modificaciones Del Chifa Capón
-* Los usuarios de caja deben imprimir cuenta y cancelar pedido.(agregar el botón de cancelar pedido).
-* Los mozos solo imprimen comandas (Eliminar el botón de imprimir cuenta y cancelar pedido, y agregar el botón de imprimir comanda).
-* Reporte de anulaciones de comandas y platillos que realizaron y mostrar el motivo de cancelación de comanda.
-* Mostrar alerta antes de emitir el registro de pago.
+- Los usuarios de caja deben imprimir cuenta y cancelar pedido.(agregar el botón de cancelar pedido).
+- Los mozos solo imprimen comandas (Eliminar el botón de imprimir cuenta y cancelar pedido, y agregar el botón de imprimir comanda).
+- Reporte de anulaciones de comandas y platillos que realizaron y mostrar el motivo de cancelación de comanda.
+- Mostrar alerta antes de emitir el registro de pago.
 - Cuando se registra pago suena la campanita de cocina.
 - En la interfaz de caja no aparece el nombre de mozo que realizo la comanda.
-* Al realizar una venta directa el sistema no imprime cuenta para realizar el conteo físico.
-    * La sumatoria total de cada menú en una hoja adicional. (Solo en venta directa para llevar).
+- Al realizar una venta directa el sistema no imprime cuenta para realizar el conteo físico.
+- Correcion de filtro de ventas
 
+# Reportes
+- Cocina
+- Detalle de consumo
 
+# Sistema de cursos
+- Cursos: Continue adaptando a la nueva arquitectura recomendado por alexander.
+- Cursos: creacion de cursos y actualizacion de los datos de los cursos desde el administrador.
+- Cursos: Registro de alumnos desde el administrador
 
-    @babel/register babelify gulp gulp-autoprefixer gulp-babel gulp-minify gulp-sass gulp-sourcemaps node-sass
-
-
-
-
-    kalu
-    almacen
-    venta
-
-    IZ
-    Kalu
-
-    Faja B-72 faja oxidel   => 121
+- Capon: Los usuarios de caja deben imprimir cuenta y cancelar pedido.(agregar el botón de cancelar pedido).
+- Capon: Los mozos solo imprimen comandas (Eliminar el botón de imprimir cuenta y cancelar pedido, y agregar el botón de imprimir comanda).
+- Capon: Reporte de anulaciones de comandas y platillos que realizaron y mostrar el motivo de cancelación de comanda.
+- Capon: Mostrar alerta antes de emitir el registro de pago.
+- Capon: Cuando se registra pago suena la campanita de cocina.
+- Capon: En la interfaz de caja no aparece el nombre de mozo que realizo la comanda.
+- Capon: Al realizar una venta directa el sistema no imprime cuenta para realizar el conteo físico.
+- Capon: Correcion de filtro de ventas.
+- Capon: Misma enumeracion en las comandas y en la ventas diarias por dia.
