--- a/skynet/2.0_avanze.md
+++ b/skynet/2.0_avanze.md
@@ -42,3 +42,14 @@ Modificaciones Del Chifa Capón
 - Capon: Al realizar una venta directa el sistema no imprime cuenta para realizar el conteo físico.
 - Capon: Correcion de filtro de ventas.
 - Capon: Misma enumeracion en las comandas y en la ventas diarias por dia.
+
+# CAPON
+- orden 21, 9, 10
+
+
+# TIGUA
+numeracion boletas 
+-- --- -- --- 
+manifiesto 2-00
+sserie - 2
+puerto maldonado
