--- a/skynet/2.0_avanze.md
+++ b/skynet/2.0_avanze.md
@@ -53,3 +53,31 @@ numeracion boletas
 manifiesto 2-00
 sserie - 2
 puerto maldonado
+
+# CAPON
+
+Lunes tarde
+- Cuando se elimina no se quita de la impresion.
+* Imprimir la ultima orden. agrgar el mismo boton en mozo.
+
+Martes por la mañana
+- Sistema de cursos
+
+
+# CALENDARIOs
+- por rango de fecha
+- por fecha especifica.
+
+```javascript
+fetch('http://calendariocaminoinca.com/calendario/availability/sendEmail').then(res=>console.log(res)).catch(err => console.log(err));
+```
+
+
+creation_date
+update_date
+
+
+# CAPON
+revisar
+- registra orden se queda en espere por fabor
+- historial de cocinas mesas incorrectas
