--- a/skynet/0.1-avanze.md
+++ b/skynet/0.1-avanze.md
@@ -2,3 +2,7 @@
 - 02:
     * Reporte de comprobantes.
     * Se levanto el sistema hotelero pucharo.
+- 03
+    * Mejorando el proceso de venta de pasajes
+- 04
+    * Soporte a zayber por una equivocacion por parte de ellos.
