--- a/skynet/archivado_03-03-2020/1.0_avanze.md
+++ b/skynet/archivado_03-03-2020/1.0_avanze.md
@@ -449,8 +449,8 @@ CREATE TABLE mante_guia_remision_detalle(
 
 ```sql
 INSERT INTO `user_menu_sistema`(`IdForm`, `Enlace`, `Nombre`, `Estado`, `Nivel1`, `Nivel2`, `Menu`, `ColorFondo`, `ColorLetra`, `Permiso`, `Clase`, `Icono`) 
-			VALUES ('216','index.php?action=RegistroGuiaRemision','Guia Remision','1','2','8','Registro','#FF7814','','1','claRsva','fas fa-atlas'),
-			       ('217','index.php?action=ReporteGuiaRemision','R. Guia Remision','1','5','16','Registro','#FF7814','','1','claRsva','');
+			VALUES ('220','index.php?action=RegistroCotizacion','R. Cotizacion','1','2','9','Reporte','#FFD812','','1','claRsva',''),
+			       ('221','index.php?action=Cotizacion','Cotizacion','1','5','18','Registro','#FF7814','','1','claRsva','fa fa-cart-arrow-down');
 ```
 
 ```sql
