--- a/skynet/0.1-avanze.md
+++ b/skynet/0.1-avanze.md
@@ -4,3 +4,97 @@
 
 compra
 mov producto
+
+# Ferconst
+* Establecer parametros de configuracion en el index.php
+```SQL
+ALTER TABLE mante_venta ADD COLUMN codigo_hash VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_venta ADD COLUMN cadena_qr VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_venta ADD COLUMN formato_pdf VARCHAR(255) DEFAULT '';
+```
+* Proceso.php
+* RegistroVenta.js
+* RegistroVentaRapida.js
+
+* Reporte.php
+* RegistroPrint.js
+
+
+# ZAYBER
+Modificaciones en los reportes
+* Ventas a credito mostrar una sumatoria diferente.
+* Sumatoria en caja solo las ventas al contado y credito ignorar los anulados
+* En el reporte de ventas mostrara quien genero el nota de pedido
+
+
+```SQL
+ALTER TABLE mante_venta ADD COLUMN IdCotizacion INT DEFAULT -1;
+ALTER TABLE mante_venta ADD COLUMN IdVentaNotaPedido INT DEFAULT -1;
+```
+
+
+# Puntos tecnicos.
+# Actividades diarias
+
+# TURISMO MER
+```sql
+ALTER TABLE mante_bus ADD COLUMN EmpresaSeguros VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_bus ADD COLUMN NPoliza VARCHAR(100) DEFAULT '';
+```
+
+```sql
+DELIMITER $$
+
+USE `db_turismomerf`$$
+
+DROP PROCEDURE IF EXISTS `mante_save_Bus`$$
+
+CREATE PROCEDURE `mante_save_Bus`(pId INT(11),pBus VARCHAR(100),pPlaca VARCHAR(100),
+		pModelo VARCHAR(100),pMarca VARCHAR(100),pNroMTC VARCHAR(100),pEstado INT(11),pIdUser INT(11), pEmpresaSeguros VARCHAR(255), pNPoliza VARCHAR(100))
+BEGIN
+	DECLARE cont INT(11);
+	IF(pId>0)THEN
+		UPDATE `mante_bus` SET NombreBus=pBus,Placa=pPlaca,Modelo=pModelo,Marca=pMarca,Estado=pEstado,NroMTC=pNroMTC,EmpresaSeguros=pEmpresaSeguros,NPoliza=pNPoliza
+		WHERE IdBus=pId;
+	ELSE
+		SELECT IFNULL(COUNT(*),0) INTO cont FROM mante_bus WHERE NombreBus=pBus;
+		IF(cont=0)THEN
+			SELECT IFNULL(MAX(IdBus+1),1) INTO pId FROM mante_bus;
+			INSERT INTO mante_bus VALUES(pId,1,pBus,pPlaca,0,'',pModelo,pMarca,pEstado,pNroMTC,pEmpresaSeguros,pNPoliza);
+		END IF;
+	END IF;
+	INSERT INTO `mante_historial` VALUES(CURRENT_TIMESTAMP(),pIdUser,'Registrar/Editar Bus','Bus');
+    END$$
+
+DELIMITER ;
+```
+
+* mantenimiento.php line 182
+* panel_Html.js
+* ManteBus.js
+
+```sql
+ALTER TABLE mante_facturacion ADD COLUMN codigo_hash VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_facturacion ADD COLUMN cadena_qr VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_facturacion ADD COLUMN formato_pdf VARCHAR(255) DEFAULT '';
+```
+
+```sql
+ALTER TABLE mante_facturacion_detalle ADD COLUMN IdTipoIgv INT DEFAULT 0;
+```
+
+# NOTA CREDITO DEBITO AUN NO ESTA PENSADO
+```sql
+ALTER TABLE mante_nota_credito_debito ADD COLUMN codigo_hash VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_nota_credito_debito ADD COLUMN cadena_qr VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_nota_credito_debito ADD COLUMN formato_pdf VARCHAR(255) DEFAULT '';
+```
+
+```sql
+ALTER TABLE mante_nota_credito_debito_detalle ADD COLUMN IdTipoIgv INT DEFAULT 0;
+```
+
+
+notas
+- GenerarFactura
+- 551
