--- a/skynet/0.1-avanze.md
+++ b/skynet/0.1-avanze.md
@@ -77,6 +77,8 @@ DELIMITER ;
 ALTER TABLE mante_facturacion ADD COLUMN codigo_hash VARCHAR(255) DEFAULT '';
 ALTER TABLE mante_facturacion ADD COLUMN cadena_qr VARCHAR(255) DEFAULT '';
 ALTER TABLE mante_facturacion ADD COLUMN formato_pdf VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_facturacion ADD COLUMN EmpresaSeguros VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_facturacion ADD COLUMN NPoliza VARCHAR(255) DEFAULT '';
 ```
 
 ```sql
@@ -88,6 +90,8 @@ ALTER TABLE mante_facturacion_detalle ADD COLUMN IdTipoIgv INT DEFAULT 0;
 ALTER TABLE mante_nota_credito_debito ADD COLUMN codigo_hash VARCHAR(255) DEFAULT '';
 ALTER TABLE mante_nota_credito_debito ADD COLUMN cadena_qr VARCHAR(255) DEFAULT '';
 ALTER TABLE mante_nota_credito_debito ADD COLUMN formato_pdf VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_nota_credito_debito ADD COLUMN EmpresaSeguros VARCHAR(255) DEFAULT '';
+ALTER TABLE mante_nota_credito_debito ADD COLUMN NPoliza VARCHAR(255) DEFAULT '';
 ```
 
 ```sql
@@ -98,3 +102,15 @@ ALTER TABLE mante_nota_credito_debito_detalle ADD COLUMN IdTipoIgv INT DEFAULT 0
 notas
 - GenerarFactura
 - 551
+
+
+- IdBus
+
+
+
+IdActualizarBus
+select#cboItinerario_VentaPsje option:selected
+
+
+# ONG
+Actividades solo se pueden ponderar las autorizadas
