--- a/skynet/0.1-avanze.md
+++ b/skynet/0.1-avanze.md
@@ -114,3 +114,136 @@ select#cboItinerario_VentaPsje option:selected
 
 # ONG
 Actividades solo se pueden ponderar las autorizadas
+
+# Reservas
+```sql
+CREATE TABLE venta_sale
+```
+
+
+
+
+Buscador de ruc actualizar || en proveedor || en cliente
+
+Warning: 
+	Lamacen producto:
+		Modificar UNIDAD
+			Cuando se modifica a una unidad no existente todavia. Se crea un porducto con nuevos precios y stock 0
+			Cuando se modifica a una unidad existente. Se copia en el formulario solo los precios - mantiene el stock
+			Puede haver un producto con el mismo codigo pero con diferentes unidades de medida y diferente precio y stock
+		Deshavilitar. si no lo necesita.
+
+Importacion mejorar.
+
+Falta trbajar bien sobre los tipos de venta como el tipo de venta post y izypay;
+
+
+
+# Nuevo sistema de ONG
+
+---------------------------------------
+Anibal	: Tema de proyecto.
+Flor	: Tiene estructurado. el proyecto. && especialista de monitoreo.
+Jhojan	: testing - simnulacon.
+Carla	: Tecnica.
+---------------------------------------
+Al plantear un nuevo proyecto hacer la simulacion de como funciona. que datos ban ha ingresar. y salir.
+
+
+## BRECHA.
+Varible la meta.
+
+
+activades.
+	- Capacitacion fecha de cacpacitado
+	- encuesta.
+
+Proyecto
+	- Marco logico.
+
+
+
+## ECOMARKET
+```sql
+ALTER TABLE `mante_producto_almacen` ADD COLUMN FechaVencimiento DATE;
+
+
+
+
+
+DELIMITER $$
+
+DROP PROCEDURE IF EXISTS `mante_save_mante_ProductoAlm`$$
+
+CREATE PROCEDURE `mante_save_mante_ProductoAlm`(`pId` INT(11), `pIdAlm` INT(3), `pIdPro` INT(11), `pPCompra` DOUBLE(11,2), `pPBase` DOUBLE(11,2), `pPDistri` DOUBLE(11,2), `pPPublico` DOUBLE(11,2), `pIdUnidad` INT(3), `pIdMoneda` INT(2), `pIdEstado` INT(1), `pTC` DOUBLE(11,2), `pFechaVencimiento` VARCHAR(32))
+BEGIN
+	DECLARE cont INT(11);
+	SELECT IFNULL(COUNT(*),0) INTO cont FROM `mante_producto_almacen` 
+	WHERE IdProducto=pIdPro AND IdAlmacen=pIdAlm AND IdUnidad=pIdUnidad;
+	IF(cont>0)THEN
+		UPDATE `mante_producto_almacen` SET PrecioCompra=pPCompra,PrecioBase=pPBase,PrecioDistribuido=pPDistri,
+			PrecioPublico=pPPublico,IdMoneda=pIdMoneda,Estado=pIdEstado,TipoCambio=pTC,FechaVencimiento=pFechaVencimiento
+		WHERE IdProducto=pIdPro AND IdAlmacen=pIdAlm AND IdUnidad=pIdUnidad;
+	ELSE
+		INSERT INTO mante_producto_almacen (IdAlmacen, IdProducto, IdUnidad, IdMoneda, Stock, PrecioCompra, PrecioBase, PrecioDistribuido, PrecioPublico, Estado, TipoCambio, FechaVencimiento)
+		VALUES (pIdAlm,pIdPro,pIdUnidad,pIdMoneda,0,pPCompra,pPBase,pPDistri,pPPublico,pIdEstado,pTC,pFechaVencimiento);
+	END IF;
+END$$
+
+DELIMITER ;
+
+ALTER TABLE plantilla_importacion ENGINE=InnoDB;
+
+
+
+
+
+
+DELIMITER $$
+
+DROP FUNCTION IF EXISTS `fn_save_kardex_Venta`$$
+
+CREATE FUNCTION `fn_save_kardex_Venta`(`pFechaReg` VARCHAR(32), `pIdUser` INT(11), `pOrigen` VARCHAR(50), `pDestino` VARCHAR(50), `pIdAlm` INT(5), `pIdProducto` INT(11), `pProducto` VARCHAR(150), `pCant` DOUBLE(11,2), `pPrecioU` DOUBLE(11,2), `pImporte` DOUBLE(11,2), `pTipoEntrada` INT(2), `pDoc` VARCHAR(50)) RETURNS INT(11)
+    READS SQL DATA
+    DETERMINISTIC
+BEGIN
+	DECLARE aResult INT(3);
+	DECLARE aStock DOUBLE(11,2);
+	DECLARE aIdFamilia INT(5);
+	SET aStock=0;SET aResult=0;SET aIdFamilia=1;
+	SELECT IFNULL(IdCategoria,1) INTO aIdFamilia FROM `mante_producto` WHERE IdProducto=pIdProducto LIMIT 1;
+	
+	SELECT IFNULL(Stock,0) INTO aStock FROM `mante_kardex` 
+	WHERE IdAlmacen=pIdAlm AND IdProducto=pIdProducto ORDER BY FechaReg DESC LIMIT 1;
+	SET aStock=aStock-pCant;
+	INSERT INTO `mante_kardex` VALUES(pFechaReg,pIdUser,pOrigen,pDestino,pIdAlm,pIdProducto,pProducto,pCant,pPrecioU,
+			pImporte,aStock,pTipoEntrada,pDoc,2,aIdFamilia);
+	SET aResult=1;
+	RETURN aResult;
+END$$
+
+DELIMITER ;
+```
+
+
+
+```sql
+ALTER TABLE `accion_ejecucion_foto` ADD COLUMN ruta_archivo VARCHAR(128) DEFAULT '';
+```
+
+
+
+# Permiso
+```sql
+SELECT p.permiso,
+CASE WHEN SUM(CASE WHEN p.id_perfil = 1 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' END AS  administrador,
+CASE WHEN SUM(CASE WHEN p.id_perfil = 2 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' END AS  director,
+CASE WHEN SUM(CASE WHEN p.id_perfil = 3 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' END AS  monitor,
+CASE WHEN SUM(CASE WHEN p.id_perfil = 4 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' END AS  coordinador,
+CASE WHEN SUM(CASE WHEN p.id_perfil = 5 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' END AS  promotor,
+CASE WHEN SUM(CASE WHEN p.id_perfil = 6 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' END AS  tecnico
+
+FROM ( SELECT DISTINCT permiso, id_perfil  FROM perfil_permiso) AS p
+LEFT JOIN perfil_permiso AS aux ON p.permiso = aux.permiso
+GROUP BY p.permiso
+```
