--- a/skynet/0.1-avanze.md
+++ b/skynet/0.1-avanze.md
@@ -165,7 +165,7 @@ Proyecto
 
 ## ECOMARKET
 ```sql
-ALTER TABLE `mante_producto_almacen` ADD COLUMN FechaVencimiento DATE;
+-- ALTER TABLE `mante_producto_almacen` ADD COLUMN FechaVencimiento DATE;
 
 
 
@@ -192,7 +192,7 @@ END$$
 
 DELIMITER ;
 
-ALTER TABLE plantilla_importacion ENGINE=InnoDB;
+-- ALTER TABLE plantilla_importacion ENGINE=InnoDB;
 
 
 
@@ -246,4 +246,166 @@ CASE WHEN SUM(CASE WHEN p.id_perfil = 6 THEN 1 ELSE 0 END) > 0 THEN 1 ELSE '' EN
 FROM ( SELECT DISTINCT permiso, id_perfil  FROM perfil_permiso) AS p
 LEFT JOIN perfil_permiso AS aux ON p.permiso = aux.permiso
 GROUP BY p.permiso
+```
+
+
+
+## TURISMO MER PHP SCRIPT REGULACION FACTURA.
+```php
+class ConexionBD
+{
+    public static function conectarBD()
+    {
+        try {
+            // $conexion = new PDO('mysql:host=localhost;dbname=turismom_turi20', 'root', '');
+            $conexion = new PDO('mysql:host=localhost;dbname=turismom_mer2020','turismom_mer2020','cuj77*Q8');
+            $conexion->exec('SET NAMES utf8 COLLATE utf8_unidecode_ci');
+            $conexion->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
+
+            return $conexion;
+        } catch (Exception $e) {
+            echo "ERROR DE CONEXION"; //. $e->getMessage. $e->getLine;
+        }
+    }
+}
+
+/*
+
+## Facturas
+* FPP2   desde numero 9 -> 20
+* FPP4   desde numero 17 -> 21
+
+
+## Boletas
+* BPP1   desde numero 2 -> 4
+* BPP2   desde numero 120 -> 452
+* BPP3   desde numero 172 -> 285
+* BPP4   desde numero 231 -> 445
+
+
+## Campos a actualizar
+* FechaReg         -> requerido **
+* Total            -> requerido **
+* SubTotal         -> opcional
+* Igv              -> opcional
+* Enlace(PDF)      -> requerdio **
+* IdTipoDocumento  -> opcional
+* Ruc              -> opcional
+* Rason Social     -> opcional
+
+*/
+
+$comprobantesRe = [
+    [
+        'comprobante' => 1,
+        'data' => [
+            [
+                'serie' => '2',
+                'numero' => [9, 19]
+            ],
+            [
+                'serie' => '4',
+                'numero' => [17, 20]
+            ],
+        ]
+    ],
+    [
+        'comprobante' => 2,
+        'data' => [
+            [
+                'serie' => '1',
+                'numero' => [2, 3]
+            ],
+            [
+                'serie' => '2',
+                'numero' => [120, 451]
+            ],
+            [
+                'serie' => '3',
+                'numero' => [172, 284]
+            ],
+            [
+                'serie' => '4',
+                'numero' => [231, 424]
+            ],
+        ]
+    ]
+];
+
+$pdo = ConexionBD::conectarBD();
+$pdo->beginTransaction();
+
+try {
+    $IdVentaInicial = 677;
+    $contadorComporbante = 0;
+
+    foreach ($comprobantesRe as $ReFila) {
+        foreach ($ReFila['data'] as $filaFac) {
+            for ($i = $filaFac['numero'][0]; $i <= $filaFac['numero'][1]; $i++) {
+                $serie = $filaFac['serie'];
+                $numero = $i;
+
+                $IdVentaInicial++;
+                $contadorComporbante++;
+
+                if ($IdVentaInicial >= 1200) {
+                    $sql = "SELECT IFNULL(MAX(IdVenta+1),1) AS cont FROM `mante_facturacion`;";
+                    $stmt = $pdo->prepare($sql);
+                    if ($stmt->execute()) {
+                        $fila1 = $stmt->fetch();
+                    }
+                    $IdVentaInicial = $fila1["cont"];
+                }
+
+                # code...
+                $IdVenta = $IdVentaInicial;
+                $idComprobante = $ReFila['comprobante'];
+                $FechaHr = '';
+                $IdUsuario = 1;
+                $IdMoneda = 1;
+                $Total = 0.00;
+                $SubTotal = 0.00;
+                $IGV = 0.00;
+                $Son = '';
+                $IdAgencia = -1;
+
+                $aEmail = '';
+                $Obs = '';
+                $idTipoDocumento = '';
+                $aRuc = '';
+                $aRS = '';
+                $aDireccion = '';
+                $EmpresaSeguros = '';
+                $NPoliza = '';
+
+                $sql = "INSERT INTO mante_facturacion (IdVenta, IdComprobante, Serie, Numero, FechaReg, IdUsuario,
+                                            IdMoneda, Total, SubTotal, IGV, Son, IdAgencia, Correo,
+                                            Obs, Estado, Enlace, ErrorSunat, idTipoDocumento, ruc, razonSocial, direccion, tipoFactura,
+                                            EmpresaSeguros, NPoliza)
+                                VALUES ('" . $IdVenta . "','" . $idComprobante . "','" . $serie . "','" . $numero . "','" . $FechaHr . "','" . $IdUsuario . "',
+                                '" . $IdMoneda . "','" . $Total . "','" . $SubTotal . "','" . $IGV . "','" . addslashes($Son) . "','" . $IdAgencia . "','" . $aEmail . "',
+                                '" . addslashes($Obs) . "',1,'','','" . $idTipoDocumento . "','" . $aRuc . "','" . addslashes($aRS) . "','" . addslashes($aDireccion) . "','DIRECTO',
+                                '" . addslashes($EmpresaSeguros) . "','" . addslashes($NPoliza) . "');";
+
+
+                $stmt = $pdo->prepare($sql);
+                if (!$stmt->execute()) {
+                    throw new Exception($stmt->errorInfo()[2]);
+                }
+
+                // BOLETO
+                $sql="INSERT INTO mante_facturacion_boleto(id_itinerario,nro_asiento,id_venta) VALUES(0,0,".$IdVenta.");";
+                $stmt = $pdo->prepare($sql);
+                $stmt->execute();
+            }
+        }
+    }
+
+    echo $IdVentaInicial . '__ ULTIMO ID';
+    echo '___Se INSETO__' . $contadorComporbante . '_COMPROBANTES';
+    $pdo->commit();
+} catch (Exception $e) {
+    $pdo->rollBack();
+    echo $e->getMessage();
+}
 ```
