--- a/skynet/0.1-avanze.md
+++ b/skynet/0.1-avanze.md
@@ -409,3 +409,16 @@ try {
     echo $e->getMessage();
 }
 ```
+
+
+
+
+
+
+
+# PLAN
+inicia en año fiscal                                    => 1 hora
+validacion para pasar a E y EP                          => 2 horas
+agrregar una opcion mas para actividades canceladas     => 3 horas
+
+Ejecucion => Fecha Ejecución -> semana de finalizacion
