--- a/skynet/2021-1.md
+++ b/skynet/2021-1.md
@@ -1,3 +1,13 @@
+ssh -i "aws_php_app.pem" ubuntu@ec2-3-19-32-82.us-east-2.compute.amazonaws.com
+romanmarron36@gmail.com
+k5Et8Io!TG#1
+
+github_key
+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
+
+AWS
+http://3.19.32.82/gimnacio/
+
 Metas antes de 15 de nobiembre
 * Ventas: Terminar con todo los parametros y validaciones
 * R. Ventas: Generar un reporte lo mejor posible
